<resources>
    <string name="app_name">MetroTrivia </string>
    <string name="greeting_word">Hello Metropolian!\u0020  </string>
    <string name="opening_word">Are you ready to test your brain?\u0020 </string>
    <string name="start_button">Start\u0020 </string>
    <string name="profile_page_button">Your accomplishments\u0020 </string>
    <string name="question_text_view">This is where we load a question. The question might be
        long so Imma write some BS to fill the space</string>
    <string name="answer_1">Answer 1 is written here</string>
    <string name="answer_3">This is the third answer</string>
    <string name="answer_2">May I present answer 2</string>
    <string name="answer_4">Ok I swear answer 4 is the last one</string>
    <string name="skip_or_next_button">View result\u0020 </string>
    <string name="choose_mode_text_view">Choose mode\u0020 </string>
    <string name="button_easy">Easy\u0020 </string>
    <string name="button_medium">Medium\u0020 </string>
    <string name="button_hard">Hard\u0020 </string>
    <string name="user_name">username</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="easy_gold">0</string>
    <string name="easy_silver">0</string>
    <string name="easy_bronze">0</string>
    <string name="medium_gold">0</string>
    <string name="medium_silver">0</string>
    <string name="medium_bronze">0</string>
    <string name="hard_gold">0</string>
    <string name="hard_silver">0</string>
    <string name="hard_bronze">0</string>
    <string name="button">Increase all counts</string>
    <string name="medalBronze">medalBronze</string>
    <string name="medalSilver">medalSilver</string>
    <string name="medalGold">medalGold</string>
    <string name="userProfilePicture">userProfilePicture</string>
    <string name="Accomplishments">Your Accomplishments</string>
    <string name="your_profile">Your profile\u0020 </string>
    <string name="try_again">Try again\u0020 </string>
    <string name="session_result">0\u0020 </string>
    <string name="no_medal_message">Oops, no medal acquired! Try again with 3 or more correct answers to get a medal!</string>
</resources>
