<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/mode_name_text_view"
        android:layout_width="128dp"
        android:layout_height="24dp"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:text="@string/difficulty_easy"
        android:textColor="@color/purple_accent_color_3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/medals_and_results_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/mode_name_text_view"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/medal_images_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/bronze_image_view"
                android:layout_width="82dp"
                android:layout_height="75dp"
                android:contentDescription="@string/medalBronze"
                app:srcCompat="@drawable/bronze"
                android:layout_marginHorizontal="30dp"/>

            <ImageView
                android:id="@+id/silver_image_view"
                android:layout_width="82dp"
                android:layout_height="75dp"
                android:contentDescription="@string/medalSilver"
                app:srcCompat="@drawable/silver"
                android:layout_marginHorizontal="30dp"/>

            <ImageView
                android:id="@+id/gold_image_view"
                android:layout_width="82dp"
                android:layout_height="75dp"
                android:contentDescription="@string/medalGold"
                app:srcCompat="@drawable/gold"
                android:layout_marginHorizontal="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/easy_medal_text_view_linear_layout"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/bronze_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_bronze" />

            <TextView
                android:id="@+id/silver_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_silver"
                android:layout_marginHorizontal="135dp"/>

            <TextView
                android:id="@+id/gold_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_gold"/>

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>